Full Scenarios are covered

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   
   "scripts": {
     "showReport": "npx playwright show-report",
-    "checkersGameTest": "npx playwright test /tests/CheckerGameTest.spec.ts --headed --workers=1 --project=chrome --reporter=html"
+    "checkersGameTest": "npx playwright test /tests/CheckerGameTest.spec.ts --headed --workers=1 --project=chrome --reporter=html",
+    "deckOfCardsApiTest": "npx playwright test /tests/DeckOfCardsAPITest.spec.ts --headed --workers=1 --project=chrome --reporter=html",
+    "runAllTests": "npx playwright test --headed --workers=1 --project=chrome --reporter=html"
+
   },
   "repository": {
     "type": "git",
